src/app/tab1/tab1.page.scss
///////////////////////////////////////////////////////

// tuto css

.example-button-row-tuto{
    float: right;
    position: fixed;
    right: 0;
    width: 100%;
    bottom: 10px;
}

.left-btn{
    float: left;
    position: absolute;
    right: 198%;
    background: #cfcfcf00 !important;
}
.right-btn{
    background: #cfcfcf00 !important;
    position: absolute;
    left: 200%;
}
.swipe-btn{
    z-index: 200;
    position: absolute;
    width: 23%;
    top: 64%;


}
.group-add-icon{
    background: aliceblue;
    border-radius: 52px;
    padding: 18px;
    width: 76px;
    display: block;
    margin-left: auto;
    margin-right: auto;
}
.img1{
    margin-right: -13px;
}
.img3{
    margin-left: -13px;
}

.icons{
    display: inline-flex;
}
.group-img{
    min-width: 69px !important;
    max-height: 69px !important;
}
.group-icon{
    background: aliceblue;
    border-radius: 52px;
    padding: 13px;
    width: 65px;
    margin-right: 8px !important;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.tuto-bg{
    background-color: brown;
    font-size: 27px;
    font-weight: 500;
}
.slide3-img{
    border: none;
    width: 310px;
    border-radius: initial;
}
.foot{
    margin-top: 47px;
}
.robot{
    width: 21%;
}
.img-tuto{
    border-radius: initial;
    border: none
}

/**
 feed Re-design
*/

.feed-container{
    position: relative;
    height: 100%;
    width: 100%;
    background-color: white;
    display: flex;
    flex-direction: column;
    border-radius: 40px 40px;
}
.sideBar-btn{
    position: absolute;
    top: 13%;
    right: 10px;
    z-index: 1000;
}

.header-feed-txt{
    text-align: center;
}

.header-feed-avatar{
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    margin-top: 24px;
    margin-left: 67px;
 
}
.feed-content{
    display: flex;
    flex-direction: row;
}
.feed-content-txt{
    height: 50%;
    width: 70%;
    top: 43%;
    position: absolute;
    left: 14%;
}
.sideBar-btn{
    display: flex;
    flex-direction: column;
}
.side-avatar{
    margin-bottom: 24px;
    max-width: 54px;
    max-height: 54px;
}
ion-avatar{
    max-width: 54px;
    max-height: 54px; 
    margin-right: 12px;
}

.footer-feed{
    position: relative;
    margin-left: 20px;
    color: white;
    display: flex;
    flex-direction: column;
    top: 67%;
    text-shadow: 2px 2px 8px #000;
}
.username{
    display: flex;
    flex-direction: row;
}

.mat-button-1{
    margin-top: 2px !important;
    margin-bottom: 10px !important;
    width: 54px;
    height: 54px;
    background: #cfcfcf;
}
.mat-button-2{
    margin-top: 2px !important;
    margin-bottom: 10px !important;
    width: 54px;
    height: 54px;
    background: #cfcfcf;
}
.mat-button-3{
    margin-top: 2px !important;
    margin-bottom: 10px !important;
    width: 54px;
    height: 54px;
    background: #cfcfcf;
}
.mat-button-4{
    margin-top: 2px !important;
    margin-bottom: 10px !important;
    width: 54px;
    height: 54px;
    background: #cfcfcf;
}

@media screen and (height: 360px), screen and (height: 640px) {
    
    .sideBar-btn{
        top: 11% !important;
    }
 
 }


//////
.ion-grid-header{
    position: relative;
    bottom: 0;
}
.btn-icon-header{
    margin-right: 13px;
}
.btn-icon{
    font-size: 24px !important;

}
.example-button-container{
    float: right;
    margin-right: -3px;
    display: flex;
}

// ion-slides
ion-slide{
    border-radius: 40px 40px 1px 0px;
    height: -webkit-fill-available;
    margin-top: 46px;
    z-index: -2;
}

ion-slides{
    height: -webkit-fill-available;
}




//@at-root
vg-player video{
    
    position: absolute;
    top: 0;
    left:0;
    overflow: hidden;
    z-index: 6; /* for accessing the video by click */
    height: auto;
}

.slide{
    height: -webkit-fill-available;
    border-radius: 40px 40px 0 0;
  
  }
  

  .play-btn{
    font-size: 31px;
    font-weight: 100;
    top: 43%;
    position: fixed;
    display: block;
    margin-left: 28px;
    background: rgb(0 0 0 / 18%);;
    padding-left: 18px;
    border-radius: 50px;
    background: #fffff000 !important;
    z-index: 9;
}

.arrow-click{
    position: absolute;
    bottom: 65px;
    color: black;
    width: 100%;
    height: 36px;
}

// slide header style

.avatar{
    position: absolute;
    left: 40px;
}

strong , small{
    font-size: 17px;
    margin-left: -15px;
}
.round-img{
    height: 64px;
    width: 64px;
    border-radius: 100%;
    -webkit-border-radius: 100%;
    -moz-border-radius: 100%; 
    border: solid 1px #ea4e50;
    padding-top: 19px;
    padding-left: 25px;
    text-align: left;
    font-size: 18px;
    float: right;
}
.header-slide{
    width: 300px;
    display: block;
    margin-left: auto;
    margin-right: auto;
    line-height: 27px;
    top: 37px;
    position: fixed;
    margin-left: 19px;
}


img{
    border: solid 2px #ea4e50;
    border-radius: 100%;
    -webkit-border-radius: 100%;
    -moz-border-radius: 100%;

}

.img{
    display: block;
    margin-left: 8px;
    margin-right: 2px;
    border-radius: 100%;
    -webkit-border-radius: 100%;
    -moz-border-radius: 100%;
    border: solid 1px #ea4e50;
    
}

// content

.content{
    display: block;
    text-align: center;
    width: auto;
    height: auto;
    width: 284px;
    z-index: 1000;
    position: absolute;
    left: 13px;
    top: 34vh;
}

// right side buttons

.fixed-wrap{
    position: absolute;
    left: 78%;
    z-index: 400 !important;
}

.img-wrapper{
    float: right;
    position: absolute;
    left: 11px;
    width: 54px;
    height: 54px;
    top: -57px;
    left: 2px;
}
.img-media{
    border-radius: 100%;
    -webkit-border-radius: 100%;
    -moz-border-radius: 100%; 
    border: solid 1px #ea4e50;
    font-size: 18px;
    top: -57px;
    left: 0px;
    width: 54px;
    height: 54px;
}
.userPseudo-bg{
    background: rgba(0, 0, 0, 0.18);
    border-radius: 60px;
    position: absolute;
    left: -11px;
}
/* ... */

